# AppleTini

./: .gitmodules  LICENSE  README.md
AppleTini/: AppleTini.ino
AppleTini/appletini/: appletini.kicad_pcb  appletini.kicad_pro  appletini.kicad_sch  transceivers.kicad_sch
AppleTini/appletini/appletini.pretty/: AppleIIBus_Edge.kicad_mod
pico/: CMakeLists.txt  bus_controller.pio  main.c
v1/AppleTini_board/: appletini.kicad_pcb  appletini.kicad_pro  appletini.kicad_sch  transceivers.kicad_sch
v1/AppleTini_pico/: AppleTini_pico.ino  bus_controller.pio  bus_controller.pio.h
v1/AppleTini_teensy/: AppleTini_teensy.ino
v2/Appletini_board/: Appletini_board.kicad_pcb  Appletini_board.kicad_pro  Appletini_board.kicad_sch  bus_transceivers.kicad_sch  glue.kicad_sch  teensy_gpio_labels.kicad_sym
v2/Appletini_pico/: Appletini_pico.ino  bus_controller.pio  bus_controller.pio.h
v2/Appletini_teensy/: Appletini_teensy.ino  globals.cpp  globals.h  globals.ino  memory.cpp  memory.h  memory.ino  soft_switches.cpp  soft_switches.h
v3/appletini_board/: appletini_board.kicad_pcb  appletini_board.kicad_pro  appletini_board.kicad_sch  transceivers.kicad_sch
v3/bus_to_cable/: bus_to_cable.kicad_pcb  bus_to_cable.kicad_pro  bus_to_cable.kicad_sch
v4/AppleTini_alchitry/: AppleTini_alchitry.alp
v4/AppleTini_alchitry/constraint/: alchitry.acf  ft.acf
v4/AppleTini_board/: AppleTini_board.kicad_pcb  AppleTini_board.kicad_pro  AppleTini_board.kicad_sch
v5/AppleTini_board/: AppleTini_board.kicad_pcb  AppleTini_board.kicad_pro  AppleTini_board.kicad_sch
(+58 files in other folders)
